--- a/management.html
+++ b/management.html
@@ -277,7 +277,8 @@
                               class="avatar d-flex flex-column gap-4 align-items-center"
                             >
                               <span
-                                class="px-4 py-3 user-avatar rounded-circle text-uppercase fs-3" style="color: #979797;"
+                                class="px-4 py-3 user-avatar rounded-circle text-uppercase fs-3"
+                                style="color: #979797"
                                 >a</span
                               >
                               <div class="staffer-name w-100">
@@ -471,7 +472,25 @@
                     />
                   </div>
                 </form>
-                <ul class="w-100 d-flex flex-column p-0 gap-3 my-3">
+                <ul class="w-100 d-flex flex-column p-0 gap-3 mb-5">
+                  <li
+                    class="currently-user pt-3 px-4 w-100 d-flex flex-column align-items-start rounded-3"
+                  >
+                    <span class="text-success fw-bold fs-6">
+                      . Currently using
+                    </span>
+                    <span class="text-dark fw-bolder">Aaddbarber</span>
+                    <p class="location-user">Newworth Ct, Columbia</p>
+                  </li>
+                  <li
+                    class="currently-user pt-3 px-4 w-100 d-flex flex-column align-items-start rounded-3"
+                  >
+                    <span class="text-success fw-bold fs-6">
+                      . Currently using
+                    </span>
+                    <span class="text-dark fw-bolder">Aaddbarber</span>
+                    <p class="location-user">Newworth Ct, Columbia</p>
+                  </li>
                   <li
                     class="currently-user pt-3 px-4 w-100 d-flex flex-column align-items-start rounded-3"
                   >
@@ -484,11 +503,20 @@
                 </ul>
               </div>
               <div
-                class="modal-footer p-0 m-0 d-flex align-items-center justify-content-between"
+                class="modal-footer p-0 m-0 d-flex align-items-center justify-content-between py-4"
               >
-                <div>
-                  <div></div>
-                  <div></div>
+                <div
+                  class="d-flex align-items-center justify-content-start gap-3"
+                >
+                  <button
+                    class="text-uppercase user-avatar py-2 px-3 rounded-circle border-none outline-none"
+                  >
+                    a
+                  </button>
+                  <div class="d-flex flex-column align-items-start">
+                    <span class="account-title">Logged as</span>
+                    <span class="account-name text-dark">Aadd</span>
+                  </div>
                 </div>
                 <a
                   href="#"
